# agh-mlops-lab11

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: ci_cd_workflow.yaml
api/: prediction.py
sentiment_app/: app.py
src/: app.py  inference.py
src/scripts/: download_artifacts.py  export_classifier_to_onnx.py  export_sentence_transformer_to_onnx.py  main.py  settings.py
test/: test_example.py
tests/: test_example.py
